:ambulance: fix request entity too large error on create step, limit files uploads to 15 by step, add custom entry on blur to combobox cause enter keydown doesn't exist on mobile

--- a/inertia/assets/css/components/inputs/_gallery-input.scss
+++ b/inertia/assets/css/components/inputs/_gallery-input.scss
@@ -2,6 +2,13 @@
 @use "../../partials/mixins";
 
 .gallery-input {
+  &__label {
+    display: flex;
+    width: fit-content;
+    @include mixins.font-type('text-medium');
+    margin-bottom: functions.rem(6);
+  }
+
   &__medias {
     display: flex;
     gap: 12px;
